brushes: kabura ink by Alcuinus
"[...] was the lack of an inking brush that 1) could be very fine,
2) was very smooth especially when it came to long curves, and 3)
varied without blotching at the beginning or end (that last one is
more personal feel than anything else).  So I tried moding the different
ink brushes until I managed the responsiveness I wanted [...]"

http://forum.intilinux.com/mypaint-finished-work/smooth-inking-brush

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -55,6 +55,7 @@ ab028
 o397
 soft_sting
 hard_sting
+Ico_Calligraphic_Pen_noborder
 Group: default
 deevad/painting-normal
 deevad/painting-lowopacity
@@ -86,7 +87,7 @@ deevad/splat-spray
 deevad/grainy-spray
 ink
 pointy_ink
-Ico_Calligraphic_Pen_noborder
+kabura
 Sketch_2
 RS_blendOP
 blend+paint
@@ -329,16 +330,25 @@ Beamlight_01
 Glow_Airbrush
 Clouds
 Clouds_2
-Group: Tilt
-tilt/impressionism_details
-tilt/impressionism
-tilt/impressionism_small
-tilt/impressionism_smudge
-tilt/puantilism
-tilt/tilt_example
-tilt/tilt_oil_knife
-animtim/ink-MyMarkerSmall
-animtim/ink-MyMarkerFat
+Group: ink
+ink
+ink_hard
+pointy_ink
+kabura
+Ico_Calligraphic_Pen
+PenBrush
+deevad/inkink
+deevad/inking-brush
+aspect_fun_1
+textured_ink
+aspec_fun_5
+Ico_Rigid_Pen
+Delayed_Line
+s008
+Ico_Precise_Pen_02
+Ico_Precise_Pen
+100%_Opaque
+bulk
 Group: Deevad
 deevad/painting-normal
 deevad/painting-lowopacity
@@ -369,24 +379,16 @@ deevad/soft-thin
 deevad/splat-spray
 deevad/grainy-spray
 Group: favorites
-Group: ink
-ink
-ink_hard
-pointy_ink
-Ico_Calligraphic_Pen
-PenBrush
-deevad/inkink
-deevad/inking-brush
-aspect_fun_1
-textured_ink
-aspec_fun_5
-Ico_Rigid_Pen
-Delayed_Line
-s008
-Ico_Precise_Pen_02
-Ico_Precise_Pen
-100%_Opaque
-bulk
+Group: Tilt
+tilt/impressionism_details
+tilt/impressionism
+tilt/impressionism_small
+tilt/impressionism_smudge
+tilt/puantilism
+tilt/tilt_example
+tilt/tilt_oil_knife
+animtim/ink-MyMarkerSmall
+animtim/ink-MyMarkerFat
 Group: Ico-dY
 Ico_Felt_pen
 Ico_Micro_Felt_Pen
