application startup: present main window, notify
Focus main window on startup after everything else is mapped. Metacity
otherwise doesn't focus anything.

Freedesktop.org startup notification.

--- a/desktop/mypaint.desktop
+++ b/desktop/mypaint.desktop
@@ -8,5 +8,6 @@ GenericName=Image Editor
 MimeType=image/openraster;image/png;image/jpeg;
 Type=Application
 Icon=mypaint
+StartupNotify=true
 Categories=Graphics;
 Terminal=false
