brushes: brushset update from Ramón
Updates for 0.9 release, set reduced to 28 brushes.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -148,6 +148,35 @@ splatter-04
 splatter-05
 splatter-06
 Group: Ramón
+B-pencil
+2B_pencil
+P._Shade
+Sketch_1
+Soft_Eraser
+Hard_Eraser
+Thin_Pen
+Pen
+PenBrush
+Marker
+Delayed_
+100%_Opaque
+Round
+Round_Bl
+BigAirbrush
+RS_blendOP
+wet_round
+Wet_Direction
+Classic_Paint
+Blur_Fast
+Smear
+Knife
+Grain
+Dirty_Noise
+Pastel_1
+Beamlight
+Glow_Airbrush
+Clouds
+Group: RamónOld
 HB-pencil
 B-pencil
 2B_pencil
