Brushes: Update brushset Deevad

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -72,34 +72,30 @@ ramon/Beamlight
 ramon/Glow_Airbrush
 ramon/Clouds
 Group: Deevad
-deevad/painting-normal
-deevad/painting-lowopacity
-deevad/thin-painting-normal
-deevad/thin-painting-lowopacity
-deevad/hard-details
-deevad/flat-basic
-deevad/flat-dry
-deevad/basic-dry
+deevad/mop
+deevad/flat
+deevad/bright
+deevad/rigger
+deevad/pencil
 deevad/eraser
-deevad/classic-pencil
-deevad/Tanda-ballpen
-deevad/annotation-pen
-deevad/grainy-blending
-deevad/chalk
+deevad/ballpen
+deevad/G-pen
+deevad/brush
+deevad/pen
+deevad/marker
+deevad/fill
+deevad/watercolor
+deevad/watercolor1
+deevad/sponge
+deevad/pastel
 deevad/charcoal
-deevad/pencil-pastel
-deevad/smooth-blending
-deevad/inkink
-deevad/inking-brush
-deevad/black-marker
-deevad/Ico-dY-oil-blending
-deevad/Tanda-watercolor
-deevad/Tanda-water-mod
-deevad/Tanda-oil-mop
-deevad/soft-large
-deevad/soft-thin
-deevad/splat-spray
-deevad/grainy-spray
+deevad/chalk
+deevad/blending
+deevad/blending1
+deevad/blending2
+deevad/airbrush
+deevad/spray
+deevad/spray1
 Group: Tanda
 tanda/acrylic-03-only-water
 tanda/acrylic-03-paint
