Brushes: Update brushset experimental
New brush icons and move brush files into subdirectories.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -132,25 +132,21 @@ tanda/watercolor-02-paint
 tanda/watercolor-02-water
 Group: favorites
 Group: experimental
-s023
-entropy_semi_eraser
-pick_and_drag
-leaves
-bi000
-basic
-o834
-o014
-bi010
-fur
-1pixel
-pixelblocking
-pixel_hardink
-tilt/impressionism_details
-tilt/impressionism
-tilt/impressionism_small
-tilt/impressionism_smudge
-tilt/puantilism
-tilt/tilt_example
-tilt/tilt_oil_knife
-animtim/ink-MyMarkerSmall
-animtim/ink-MyMarkerFat
+experimental/1pixel
+experimental/pixel_hardink
+experimental/pixelblocking
+experimental/basic
+experimental/subtle_pencil
+experimental/hard_sting
+experimental/glow
+experimental/soft
+experimental/track
+experimental/speed_blot
+experimental/fur
+experimental/spaced-blot
+experimental/hard_blot
+experimental/sewing
+experimental/particules_eraser
+experimental/pick_and_drag
+experimental/leaves
+experimental/DNA_brush
