Brushes: Move 5 brushes from classic to experimental

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -18,18 +18,13 @@ classic/slow_ink
 classic/pointy_ink
 classic/brush
 classic/textured_ink
-classic/bubble
 classic/ink_blot
 classic/coarse_bulk_3
 classic/coarse_bulk_2
 classic/coarse_bulk_1
-classic/small_blot
-classic/particules_3
 classic/short_grass
 classic/long_grass
 classic/bulk
-classic/soft_irregular
-classic/irregular_ink
 classic/calligraphy
 classic/puantilism
 classic/puantilism2
@@ -143,6 +138,11 @@ experimental/soft
 experimental/track
 experimental/speed_blot
 experimental/fur
+experimental/soft_irregular
+experimental/irregular_ink
+experimental/bubble
+experimental/small_blot
+experimental/particules_3
 experimental/spaced-blot
 experimental/hard_blot
 experimental/sewing
