Updated the Norwegian Nynorsk translation
Updated the nn_NO translation, after the addition of new strings.
Changed occurrences of "gjennomsiktigheit" to "dekkjeevne".
Added nn_NO and nb_NO translations for the comment in the desktop file.

--- a/desktop/mypaint.desktop
+++ b/desktop/mypaint.desktop
@@ -7,6 +7,8 @@ Exec=mypaint %f
 Comment=Painting program for digital artists
 Comment[ro]=Software de artă plastică digitală
 Comment[fr]=Logiciel de peinture numérique pour artistes
+Comment[nn_NO]=Måleprogram for digitale artistar
+Comment[nb_NO]=Maleprogram for digitale artister
 Comment[zh_CN]=艺术家的电脑绘画
 Comment[zh_TW]=藝術家的电脑绘画
 Comment[zh_HK]=藝術家的电脑绘画
