linux: desktop file rewording & categorisation
Translations from IRC, incomplete.

--- a/desktop/mypaint.desktop
+++ b/desktop/mypaint.desktop
@@ -2,12 +2,19 @@
 Version=1.0
 Encoding=UTF-8
 Name=MyPaint
+TryExec=mypaint
 Exec=mypaint %f
-Comment=Paint images from scratch
-GenericName=Image Editor
+Comment=Painting program for digital artists
+Comment[ro]=Software de artă plastică digitală
+Comment[fr]=Logiciel de peinture numérique pour artistes
+Comment[zh_CN]=艺术家的电脑绘画
+Comment[zh_TW]=藝術家的电脑绘画
+Comment[zh_HK]=藝術家的电脑绘画
+GenericName=Raster Graphics Editor
+GenericName[fr]=Éditeur d'Image Matricielle
 MimeType=image/openraster;image/png;image/jpeg;
 Type=Application
 Icon=mypaint
 StartupNotify=true
-Categories=Graphics;
+Categories=Graphics;GTK;2DGraphics;RasterGraphics;
 Terminal=false
