--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -65,30 +65,49 @@ ramon/Beamlight
 ramon/Glow_Airbrush
 ramon/Clouds
 Group: Deevad
-deevad/mop
-deevad/flat
-deevad/bright
+deevad/sketch
+deevad/4H
+deevad/2B
+deevad/artpen
+deevad/kneaded
+deevad/kneaded2
+deevad/stick
+deevad/hard
+deevad/digital
+deevad/mixbrush
+deevad/knife
+deevad/knife2
+deevad/detail1
+deevad/detail2
+deevad/detail3
+deevad/detail4
 deevad/rigger
-deevad/pencil
-deevad/eraser
-deevad/ballpen
-deevad/G-pen
-deevad/brush
-deevad/pen
-deevad/marker
-deevad/fill
-deevad/watercolor
-deevad/watercolor1
-deevad/sponge
-deevad/pastel
-deevad/charcoal
-deevad/chalk
+deevad/rigger2
+deevad/mop
 deevad/blending
-deevad/blending1
+deevad/water1
+deevad/water2
+deevad/water3
+deevad/sponge
+deevad/marker
+deevad/ballpen
+deevad/liner
+deevad/pen
+deevad/gpen
+deevad/brush
+deevad/fill
+deevad/technical
+deevad/chalk
+deevad/charcoal
+deevad/pastel
 deevad/blending2
-deevad/airbrush
 deevad/spray
-deevad/spray1
+deevad/spray2
+deevad/spray3
+deevad/airbrush
+deevad/airbrush2
+deevad/blending3
+deevad/flat
 Group: Tanda
 tanda/acrylic-03-only-water
 tanda/acrylic-03-paint
