rename default brush groups
Don't use artist's name, use neutral "set#1", "set#2", etc. as
proposed on the mailing list.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -35,72 +35,7 @@ classic/wet_knife
 classic/blending_knife
 classic/smudge
 classic/blur
-Group: Tanda
-tanda/acrylic-03-only-water
-tanda/acrylic-03-paint
-tanda/acrylic-03-with-water
-tanda/acrylic-04-only-water
-tanda/acrylic-04-paint
-tanda/acrylic-04-with-water
-tanda/acrylic-05-only-water
-tanda/acrylic-05-paint
-tanda/acrylic-05-with-water
-tanda/charcoal-01
-tanda/charcoal-03
-tanda/charcoal-04
-tanda/charcoal-blur1
-tanda/marker-01
-tanda/marker-05
-tanda/oil-01-clean
-tanda/oil-01-paint
-tanda/oil-03-clean
-tanda/oil-03-paint
-tanda/oil-06-clean
-tanda/oil-06-paint
-tanda/oil-mop
-tanda/pencil-2b
-tanda/pencil-8b
-tanda/splatter-02
-tanda/splatter-04
-tanda/texture-03
-tanda/texture-06
-tanda/texture-12
-tanda/water-01
-tanda/water-02
-tanda/water-05
-tanda/water-06
-tanda/watercolor-02-paint
-tanda/watercolor-02-water
-Group: Ramón
-ramon/B-pencil
-ramon/2B_pencil
-ramon/P._Shade
-ramon/Sketch_1
-ramon/Soft_Eraser
-ramon/Hard_Eraser
-ramon/Thin_Pen
-ramon/Pen
-ramon/PenBrush
-ramon/Marker
-ramon/Delayed_
-ramon/100%_Opaque
-ramon/Round
-ramon/Round_Bl
-ramon/BigAirbrush
-ramon/RS_blendOP
-ramon/wet_round
-ramon/Wet_Direction
-ramon/Classic_Paint
-ramon/Blur_Fast
-ramon/Smear
-ramon/Knife
-ramon/Grain
-ramon/Dirty_Noise
-ramon/Pastel_1
-ramon/Beamlight
-ramon/Glow_Airbrush
-ramon/Clouds
-Group: Deevad
+Group: set#2
 deevad/sketch
 deevad/4H
 deevad/2B
@@ -145,6 +80,35 @@ deevad/airbrush2
 deevad/blending3
 deevad/flat
 Group: favorites
+Group: set#1
+ramon/B-pencil
+ramon/2B_pencil
+ramon/P._Shade
+ramon/Sketch_1
+ramon/Soft_Eraser
+ramon/Hard_Eraser
+ramon/Thin_Pen
+ramon/Pen
+ramon/PenBrush
+ramon/Marker
+ramon/Delayed_
+ramon/100%_Opaque
+ramon/Round
+ramon/Round_Bl
+ramon/BigAirbrush
+ramon/RS_blendOP
+ramon/wet_round
+ramon/Wet_Direction
+ramon/Classic_Paint
+ramon/Blur_Fast
+ramon/Smear
+ramon/Knife
+ramon/Grain
+ramon/Dirty_Noise
+ramon/Pastel_1
+ramon/Beamlight
+ramon/Glow_Airbrush
+ramon/Clouds
 Group: experimental
 experimental/1pixel
 experimental/pixel_hardink
@@ -169,3 +133,39 @@ experimental/particules_eraser
 experimental/pick_and_drag
 experimental/leaves
 experimental/DNA_brush
+Group: set#3
+tanda/acrylic-03-only-water
+tanda/acrylic-03-paint
+tanda/acrylic-03-with-water
+tanda/acrylic-04-only-water
+tanda/acrylic-04-paint
+tanda/acrylic-04-with-water
+tanda/acrylic-05-only-water
+tanda/acrylic-05-paint
+tanda/acrylic-05-with-water
+tanda/charcoal-01
+tanda/charcoal-03
+tanda/charcoal-04
+tanda/charcoal-blur1
+tanda/marker-01
+tanda/marker-05
+tanda/oil-01-clean
+tanda/oil-01-paint
+tanda/oil-03-clean
+tanda/oil-03-paint
+tanda/oil-06-clean
+tanda/oil-06-paint
+tanda/oil-mop
+tanda/pencil-2b
+tanda/pencil-8b
+tanda/splatter-02
+tanda/splatter-04
+tanda/texture-03
+tanda/texture-06
+tanda/texture-12
+tanda/water-01
+tanda/water-02
+tanda/water-05
+tanda/water-06
+tanda/watercolor-02-paint
+tanda/watercolor-02-water
