brushes: update of deevad brushset
Mainly little improvement here and there to make them react better,
have more linear pressure behavior, more predictible effect, or
just correction of some glitch happening sometimes with (newer?)
antialiasing and hardness. Also, I did 4 or 5 removal and sort them
a little bit differently.

Normaly, if I did well my job , most user will not see any
difference, but tools will be better for their artworks...
I changed license of the brush pack to "public domain" ( to avoid
problems with pick context, and derivative brush pack )
I didn't labelled icons with text, because most of the brush icons
visual are pretty obvious imo, and label are not adapted to each
langage ; I'm happy to have Asian user of my preset.

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -47,7 +47,7 @@ deevad/hard
 deevad/digital
 deevad/mixbrush
 deevad/knife
-deevad/knife2
+deevad/mixknife
 deevad/detail1
 deevad/detail2
 deevad/detail3
@@ -62,23 +62,16 @@ deevad/water3
 deevad/sponge
 deevad/marker
 deevad/ballpen
-deevad/liner
 deevad/pen
 deevad/gpen
 deevad/brush
 deevad/fill
-deevad/technical
 deevad/chalk
 deevad/charcoal
-deevad/pastel
 deevad/blending2
 deevad/spray
 deevad/spray2
-deevad/spray3
 deevad/airbrush
-deevad/airbrush2
-deevad/blending3
-deevad/flat
 Group: favorites
 Group: set#1
 ramon/B-pencil
