mypaintlib: Use SharedLibrary instead of LoadableModule in build
On OSX LoadableModule will try to create a module bundle,
which is not what we want. The SHLIBSUFFIX was also ignored,
so produced file had the wrong file extension.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -13,10 +13,10 @@ env.Clean('.', 'mypaintlib.py')
 # python extension module
 src = 'mypaintlib_wrap.cpp'
 if sys.platform == "win32": # there 's a better way to do this 
-    module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".pyd")
+    module = env.SharedLibrary('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".pyd")
 elif sys.platform == "darwin":
-    module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".so")
+    module = env.SharedLibrary('_mypaintlib', Split(src), SHLIBPREFIX="", SHLIBSUFFIX=".so")
 else:
-    module = env.LoadableModule('_mypaintlib', Split(src), SHLIBPREFIX="")
+    module = env.SharedLibrary('_mypaintlib', Split(src), SHLIBPREFIX="")
 
 Return('module')
