brushlib: Add MYPAINT_BRUSH_ prefix to states, inputs and settings
They are public API, so they need to be prefixed.

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .sconsign.dblite
 TAGS
 tags
-brushlib/brushsettings.h
+brushlib/*-gen.h
 lib/_mypaintlib.so
 lib/mypaintlib.py
 lib/mypaintlib_wrap.cpp
