--- a/lib/SConscript
+++ b/lib/SConscript
@@ -37,11 +37,22 @@ env.ParseConfig('pkg-config --cflags --libs glib-2.0')
 env.ParseConfig('pkg-config --cflags --libs libpng')
 env.ParseConfig('pkg-config --cflags --libs lcms2')
 
-if env['enable_gegl']:
-    env.ParseConfig('pkg-config --cflags --libs gegl-0.2')
-    env.ParseConfig('pkg-config --cflags --libs pygobject-2.0')
+pygobject = 'pygobject-2.0'
 
+if env['enable_gtk3']:
+    env.ParseConfig('pkg-config --cflags --libs gtk+-3.0')
+    env.Append(CPPDEFINES=['HAVE_GTK3']) # possibly useful while we're porting
+    pygobject = 'pygobject-3.0'   # keep in step?
+else:
+    env.ParseConfig('pkg-config --cflags --libs gtk+-2.0')
+
+if env['enable_gegl']:
+    assert pygobject == 'pygobject-2.0'
+    env.ParseConfig('pkg-config --cflags --libs gegl-0.2')
     env.Append(CPPDEFINES=['HAVE_GEGL'])
+
+
+env.ParseConfig('pkg-config --cflags --libs ' + pygobject)
 
 # Get the numpy include path (for numpy/arrayobject.h).
 numpy_path = numpy.get_include()
