brushes: update Deevad's brushset (set #2)
This is Deevad's brushset version 6 done for Mypaint version 1.1.0
This brush kit is released in public domain, so feel free to create
what you want with it.

http://deevad.deviantart.com/art/Mypaint-V6-Brushkit-335059175

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -36,41 +36,41 @@ classic/blending_knife
 classic/smudge
 classic/blur
 Group: set#2
-deevad/sketch
-deevad/4H
-deevad/2B
-deevad/artpen
-deevad/kneaded
-deevad/kneaded2
-deevad/stick
-deevad/hard
-deevad/digital
-deevad/mixbrush
-deevad/knife
-deevad/mixknife
-deevad/detail1
-deevad/detail2
-deevad/detail3
-deevad/detail4
-deevad/rigger
-deevad/rigger2
-deevad/mop
-deevad/blending
-deevad/water1
-deevad/water2
-deevad/water3
-deevad/sponge
-deevad/marker
-deevad/ballpen
+deevad/rough
+deevad/4H_pencil
+deevad/2B_pencil
 deevad/pen
-deevad/gpen
+deevad/kneaded_eraser
+deevad/kneaded_eraser_large
+deevad/large_hard_eraser
+deevad/thin_hard_eraser
+deevad/basic_digital_brush
+deevad/basic_digital_brush_smudging
+deevad/basic_digital_knife
+deevad/basic_digital_knife_smudging
+deevad/detail_brush_large
+deevad/detail_brush_large_glazing
+deevad/detail_brush_thin
+deevad/detail_brush_thin_glazing
+deevad/rigger_brush
+deevad/rigger_brush_thin
+deevad/thin_watercolor
+deevad/large_watercolor_fringe
+deevad/watercolor_glazing
+deevad/watercolor_expressive
+deevad/only_water_fringe
+deevad/sponge_smudging
+deevad/ballpen
+deevad/pen-note
+deevad/soft-dip-pen
+deevad/liner
 deevad/brush
 deevad/fill
-deevad/chalk
-deevad/charcoal
-deevad/blending2
 deevad/spray
 deevad/spray2
+deevad/chalk
+deevad/grainy_blending
+deevad/blending
 deevad/airbrush
 Group: favorites
 Group: set#1
