--- a/po/SConscript
+++ b/po/SConscript
@@ -16,7 +16,10 @@ for lang in languages:
 lang = ARGUMENTS.get('translate')
 if lang:
     env.Execute('git grep --full-name --files-with-matches "^from gettext import" .. | sort > POTFILES.in')
+    env.Execute('intltool-extract --local --type=gettext/glade ../gui/mypaint.xml')
+    env.Execute('echo po/tmp/mypaint.xml.h >> POTFILES.in')
     env.Execute('intltool-update -g mypaint --pot')
+    env.Execute('rm -rf tmp')
     if lang == 'all':
         translate = languages
     elif lang == 'pot':
