lib: Add brushlib perf tests for Python-based tile surface
A bit complicated since the brushlib tests are in C, and the surface
implementation parly in Python. Have to embedd a Python interpreter
in the executable, and get the C surface interface from the Python instance
using SWIG.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ TAGS
 tags
 brushlib/*-gen.h
 brushlib/mypaint-config.h
+lib/test-python-surface
 lib/_mypaintlib.so
 lib/mypaintlib.py
 lib/mypaintlib_wrap.cpp
