--- a/lib/SConscript
+++ b/lib/SConscript
@@ -22,6 +22,7 @@ if env.Execute('swig -o mypaintlib_wrap.cpp -noproxydel -python -c++ %s mypaintl
     Exit(1)
 env.Clean('.', 'mypaintlib_wrap.cpp')
 env.Clean('.', 'mypaintlib.py')
+env.Clean('.', Glob('*.o'))
 
 # fix bug when upgrading git from e.g. v1.0.0 (old module is loaded instead of new)
 env.Execute('rm -f _mypaintlib.so')
