prefs: move dialog contents to GtkBuilder XML
Define the bulk of the prefs UI in GtkBuilder, editable in glade3 (hence
the different extension). It was getting unwieldy, and had broken
completely with the migration to GTK3.

This is pretty much GTK3-only code now. GtkGrids, and combo boxes with
string ID columns probably aren't backwards compatible with PyGTK.

Support argless construction for ButtonMappingEditor.

Add translation support for strings in gui/*.glade files.

--- a/po/SConscript
+++ b/po/SConscript
@@ -17,6 +17,7 @@ lang = ARGUMENTS.get('translate')
 if lang:
     env.Execute('git grep --full-name --files-with-matches "^from gettext import" .. | sort > POTFILES.in')
     env.Execute('intltool-extract --local --type=gettext/glade ../gui/mypaint.xml')
+    env.Execute('intltool-extract --local --type=gettext/glade ../gui/*.glade')
     env.Execute('echo po/tmp/mypaint.xml.h >> POTFILES.in')
     env.Execute('intltool-update -g mypaint --pot')
     if lang == 'all':
