gtk3: formally drop support for PyGTK, update docs
Formally remove support for PyGTK, and update the docs to reflect this.
Future code should be written in the Python-GObject style only and not rely
on the compatibility layer.

* Drop enable_gtk3=no from the scons stuff.
  Was enabled by default; now we don't support disabling it.
* Remove support for MYPAINT_ENABLE_GTK3=no for the same reason.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -54,14 +54,12 @@ env.ParseConfig('pkg-config --cflags --libs lcms2')
 
 pygobject = 'pygobject-2.0'
 
-if env['enable_gtk3']:
-    env.ParseConfig('pkg-config --cflags --libs gtk+-3.0')
-    env.Append(CPPDEFINES=['HAVE_GTK3']) # possibly useful while we're porting
-    pygobject = 'pygobject-3.0'   # keep in step?
-else:
-    env.ParseConfig('pkg-config --cflags --libs gtk+-2.0')
+env.ParseConfig('pkg-config --cflags --libs gtk+-3.0')
+env.Append(CPPDEFINES=['HAVE_GTK3']) # possibly useful while we're porting
+pygobject = 'pygobject-3.0'   # keep in step?
 
 if env['enable_gegl']:
+    # FIXME: this is now lagging.
     assert pygobject == 'pygobject-2.0'
     env.ParseConfig('pkg-config --cflags --libs gegl-0.2')
     env.Append(CPPDEFINES=['HAVE_GEGL'])
