--- a/lib/SConscript
+++ b/lib/SConscript
@@ -56,6 +56,10 @@ env.ParseConfig('pkg-config --cflags --libs gtk+-3.0')
 env.Append(CPPDEFINES=['HAVE_GTK3']) # possibly useful while we're porting
 pygobject = 'pygobject-3.0'   # keep in step?
 
+if env['enable_openmp']:
+    env.Append(CXXFLAGS=['-fopenmp'])
+    env.Append(LINKFLAGS=['-fopenmp'])
+
 if env['enable_gegl']:
     env.ParseConfig('pkg-config --cflags --libs gegl-0.3')
     env.Append(CPPDEFINES=['HAVE_GEGL'])
