lib: fix GCC 4.6 linking / split compile
Fix a runtime linker error under GCC 4.6 (Ubuntu 12.04):

  ImportError: /usr/local/lib/mypaint/_mypaintlib.so: undefined symbol:
  _ZN17BufferCombineFunc[...]E

Also split various parts of the mypaintlib extension module into
independent compilation units. Update the build accordingly. Affects:

 * fill
 * eventhack
 * gdkpixbuf2numpy
 * pixops

Eventual goal is to clean up mypaintlib.i, and compile as much fancy
templated pixel grinding stuff separately as we can.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -100,8 +100,14 @@ if env.get('CPPDEFINES'):
     env['CPPDEFINES'].remove('NDEBUG')
 
 # python extension module
-src = 'mypaintlib_wrap.cpp'
-module = build_py_module(env, '../_mypaintlib', Split(src), SHLIBPREFIX="")
+module_src = [
+        'mypaintlib_wrap.cpp',
+        'fill.cpp',
+        'eventhack.cpp',
+        'gdkpixbuf2numpy.cpp',
+        'pixops.cpp',
+    ]
+module = build_py_module(env, '../_mypaintlib', module_src, SHLIBPREFIX="")
 
 Return('module')
 
